# rise-controller

./: #promt_for_ai.lyx#  .gitignore  README.md  joe_code.py  main.py  promt_for_ai.lyx  promt_for_ai.lyx~  pyproject.toml  sentinel_code_first_flight.py
1 - Paper/: #math.lyx#  #math2.lyx#  #paper.lyx#  experimental_controllers.lyx  math.lyx  math2.lyx  math3.lyx  paper.lyx  paper.tex  target_tracking.lyx  verification.lyx  verify_controller.py
2 - Code/: Aviary.blend  Aviary.blend1  test_new_proj.py
2 - Code/Gazebo SITL/: README.md  baseline_params.yaml  developed_params.yaml  generate_hardware_params.py  gz_odom.yaml  install_gz_harmonic.sh  noresnet_params.yaml  plan_initial_weights.py  pyproject.toml  read_db_best_results.py  ros-sources.sh  run-gz-sim.sh  run-ros2gz-topic-bridge.sh  run-tb-sim.sh  run_best_gains.py  shutdown-background-services.sh  spawn-px4-sitl-instance.sh  spawn-sim-env.sh  temp.md  unified_orchestrator.py
2 - Code/Gazebo SITL/background-scripts/: background-shutdown-ros-nodes.sh  background-spawn-px4-sitl.sh  background-start-xrce-agent.sh
2 - Code/Gazebo SITL/conf/: config.yaml
2 - Code/Gazebo SITL/px4-updates/dds-client/: dds_topics.yaml
2 - Code/Gazebo SITL/px4-updates/init.d-posix/airframes/: 4005_gz_x500_vision  4101_gz_sentinel_vision
2 - Code/Gazebo SITL/px4-updates/models/sentinel/: model.config
2 - Code/Gazebo SITL/px4-updates/models/sentinel_base/: model.config  model.sdf
2 - Code/Gazebo SITL/px4-updates/models/sentinel_vision/: model.sdf
2 - Code/Gazebo SITL/px4-updates/sitl-build-fix/: board_common.h  main.cpp
2 - Code/Gazebo SITL/ros2_ws/src/aviary_rise_controller/: package.xml  setup.py
2 - Code/Gazebo SITL/ros2_ws/src/aviary_rise_controller/aviary_rise_controller/: aviary_rise_node.py
2 - Code/Gazebo SITL/ros2_ws/src/aviary_rise_controller/param/: params.yaml
2 - Code/Gazebo SITL/ros2_ws/src/aviary_wind_plugin/: CMakeLists.txt  package.xml
2 - Code/Gazebo SITL/scripts/: run_best_gains.py  unified_orchestrator.py
2 - Code/Gazebo SITL/worlds/: mocap_fig8.sdf  mocap_rose.sdf
2 - Code/Unity SITL/: evaluate_robustness.py  main.py  params.yaml  pyproject.toml  run_all.sh  run_optimization.py  run_sim.py  test.py  test3.py  test_takeoff.py
2 - Code/Unity SITL/conf/: best_gains copy.yaml  best_gains.yaml  config.yaml
2 - Code/Unity SITL/controllers/: desired_trajectory.py  proj.py
2 - Code/Unity SITL/docs/: architecture.md  codebase_notes.md  context.md  experiment_prep.md  init.md  scripts.md
2 - Code/Unity SITL/docs/px4_sample/: desired_trajectory.py
2 - Code/Unity SITL/docs/scenes/: Aviary_2.unity
2 - Code/Unity SITL/px4_sample/: config.yaml
2 - Code/Unity SITL/px4_tests/: config.yaml  optuna_tune.py  pid_controller.py  px4_pid_node.py
2 - Code/Unity SITL/px4_unity_reference/: GeometricController.py  control_modes.md  px4_geometric_offboard.py
2 - Code/Unity SITL/px4_working/: sentinel_px4.params
2 - Code/Unity SITL/scenes/: Aviary.fbx  Aviary_0.unity  Aviary_1.unity  Aviary_2.unity  Good Terrain.asset
2 - Code/Unity SITL/scenes/Aviary_1/: Sky and Fog Settings.asset
2 - Code/Unity SITL/scripts/: debug_flight.py  debug_run_sim.py  evaluate_robustness.py  extract_gains.py  generate_hardware_params.py  optimization.py  plot_csv_results.py  run_all.sh  run_optimization.py  run_optimization.sh  run_robustness.sh  test.sh  test_accel.py  test_gains.py
2 - Code/Unity SITL/src/: aviary_rise_node.py  desired_trajectory.py  proj.py  ros_node.py  run_sim.py  test.py
2 - Code/Unity SITL/src/px4_unity_reference/: README.md  acceleration_optuna_skeleton.py  run_tune_sitl.py  tune_gains_sitl.py
2 - Deprecated Code/: README.md  pyproject.toml
2 - Deprecated Code/src/conf/: tuned_gains.yaml
2 - Deprecated Code/src/io/: plotter.py
2 - Deprecated Code/src/math/: networks.py
3 - Reference Material/: Cristian_2nd_order_adaptive_rise_uub.lyx  Cristian_first_draft.lyx  Omkar Exponential RISE.lyx  first-order-controllers.lyx  second_order_math_check.py
3 - SITL/: .gitignore  README.md  baseline_params.yaml  build_instructions.txt  connect-to-sim-container.sh  developed_params.yaml  generate_hardware_params.py  get_best_results.py  phase2_baseline.db  plot_trial.py  post_flight_analysis.py  read_db_best_results.py  ros-sources.sh  run-gz-sim.sh  run-px4-sim-container.sh  run-ros2-container.sh  run_best_gains.py  run_phase2_batch.py  shutdown-background-services.sh  spawn-locations.env  spawn-sentinel-vision-model.sh  spawn-sim-env.sh  start-xrce-agent.sh  unified_orchestrator.py  update-px4-files.sh
4 - Reference Material/: recreating_old_dixon_paper.lyx
4 - Simulation Data/: .~lock.Gazebo Log.odt#  Gazebo Log.odt  phase1_take7.db  supertwisting_wind_take1.db
4 - Simulation Trials/: noresnet_wind_1_july7.db  noresnet_wind_2_july8.db  phase2_developed_take2.db
5 - AI Prompts/: .~lock.Log.odt#  (+3 more)
(+87 files in other folders)
