[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rise-workspace"
version = "0.1.0"
description = "JAX/Diffrax framework for exponential modular adaptive RISE controller."
authors = [
    { name = "Max Gardenswartz", email = "mgardenswartz@ufl.edu" }
]
requires-python = ">=3.10"
dependencies = [
    # Core Math & Integration Engine
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "diffrax>=0.5.0",
    
    # Configuration & Sweeping
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "hydra-optuna-sweeper",
    
    # Data Processing & Visualization
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0"
]

[project.optional-dependencies]
# Hardware acceleration for Apple Silicon (Metal backend)
apple = ["jax-metal"]
cuda12 = ["jax[cuda12]"]
cuda13 = ["jax[cuda13]"]

# Linting, typing, and testing tools
dev = [
    "pytest",
    "ruff",
    "mypy"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
strict = true
ignore_missing_imports = true