[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "setinel-sitl"
version = "0.1.0"
description = "Sentintel SITL for RISE controller testing"
authors = [
    { name = "Max Gardenswartz", email = "mgardenswartz@ufl.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "jax",
    "numpy",
    "pandas",
    "matplotlib",
    "quadsim-sdk"
]

[project.optional-dependencies]
cuda12 = ["jax[cuda12]"]
cuda13 = ["jax[cuda13]"]

dev = [
    "pytest",
    "ruff",
    "mypy"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
strict = true
ignore_missing_imports = true